# gfeeds

./: .gitignore  .gitlab-ci.yml  INSTALL  INSTALL.md  README.md  build.sh  dependencies.txt  meson.build  meson_post_install.py  new_release.sh  run.sh  take_screenshots
data/: meson.build  org.gabmus.gfeeds.appdata.xml.in  org.gabmus.gfeeds.desktop.in  org.gabmus.gfeeds.gresource.xml  org.gabmus.gfeeds.gschema.xml.in  org.gabmus.gfeeds.service.desktop  org.gabmus.gnome-feeds.appdata.xml.in  org.gabmus.gnome-feeds.desktop.in  org.gabmus.gnome-feeds.gresource.xml  org.gabmus.gnome-feeds.service.desktop  org.gabmus.gnome-feeds.service.in  reader_mode_dark_style.css  reader_mode_style.css
data/ui/: #article_right_click_popover_content.glade#  aboutdialog.glade.in  add_feed_box.glade  article_right_click_popover_content.glade  empty_state.glade  extra_popover_menu.glade  gfeeds_leaflet.glade  headerbar.glade  manage_feeds_listbox_row.glade  menu.xml  meson.build  scrolled_label.glade  shortcutsWindow.xml  sidebar_filler.glade  sidebar_listbox_row.glade  spinner_button.glade  webview_filler.glade  webview_with_notification.glade
gfeeds/: __main__.py  app_window.py  build_reader_html.py  colored_box.py  colorthief.py  confManager.py  confirm_add_dialog.py  download_manager.py  feeds_manager.py  feeds_view.py  get_favicon.py  headerbar.py  initials_icon.py  leaflet.py  listbox_tools.py  manage_feeds_window.py  opml_file_chooser.py  opml_manager.py  reader_mode_style.py  relative_day_formatter.py  revealer_loading_bar.py  rss_parser.py  scrolled_message_dialog.py  searchbar.py  settings_window.py  sha.py  shortcuts_window.py  sidebar.py  sidebar_row.py  sidebar_row_popover.py  signaler_list.py  singleton.py  spinner_button.py  stack_with_empty_state.py  suggestion_bar.py  test_connection.py  thread_pool.py  url_sanitizer.py  view_mode_menu.py  webview.py
po/: LINGUAS  POTFILES.in  README.md  de.po  es.po  fr.po  it.po  pt_BR.po  ru.po  update_potfiles.sh
tests/: README.md  __init__.py  download_manager.py  rss_parser.py  sample_html.py  sample_rss.py
website/: index.html  page.md  style.css
website/screenshots/: concat_preferences_scrots.sh
